--- a/cumulus/polkadot-parachain/Cargo.toml
+++ b/cumulus/polkadot-parachain/Cargo.toml
@@ -52,6 +52,8 @@ xcm = { workspace = true, default-features = true }
 
 # Cumulus
 cumulus-primitives-core = { workspace = true, default-features = true }
+clap = { version = "4.5.13", features = ["derive"] }
+anyhow = "1.0.86"
 
 [build-dependencies]
 substrate-build-script-utils = { workspace = true, default-features = true }
