Send token to Rococo (#58)
* add eth to rococo registered tokens

* test

* rococo test

* bridge to kusama

* tests to rococo

* adds pna to rococo test

* rococo test

* cleanup

* use new ExternalConsensusLocationsConverterFor

* remove unused things, fmt

--- a/cumulus/parachains/integration-tests/emulated/chains/parachains/assets/asset-hub-rococo/Cargo.toml
+++ b/cumulus/parachains/integration-tests/emulated/chains/parachains/assets/asset-hub-rococo/Cargo.toml
@@ -28,6 +28,7 @@ testnet-parachains-constants = { features = ["rococo"], workspace = true, defaul
 
 # Polkadot
 xcm = { workspace = true }
+xcm-builder = { workspace = true, default-features = true }
 
 # Bridges
 bp-bridge-hub-rococo = { workspace = true }
