adds 2 hop transfer to rococo

--- a/cumulus/parachains/integration-tests/emulated/common/Cargo.toml
+++ b/cumulus/parachains/integration-tests/emulated/common/Cargo.toml
@@ -12,6 +12,7 @@ repository.workspace = true
 workspace = true
 
 [dependencies]
+hex-literal = { workspace = true }
 codec = { workspace = true }
 paste = { workspace = true, default-features = true }
 
