--- a/.github/workflows/tests-linux-stable.yml
+++ b/.github/workflows/tests-linux-stable.yml
@@ -53,7 +53,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: script
-        run: forklift cargo nextest run --workspace --features runtime-benchmarks benchmark --locked --cargo-profile testnet --cargo-quiet
+        run: cargo nextest run --workspace --features runtime-benchmarks benchmark --locked --cargo-profile testnet --cargo-quiet
 
   test-linux-stable:
     needs: [preflight]
@@ -85,7 +85,7 @@ jobs:
         run: |
           # Fixes "detected dubious ownership" error in the ci
           git config --global --add safe.directory '*'
-          forklift cargo nextest run \
+          cargo nextest run \
             --workspace \
             --locked \
             --release \
@@ -96,7 +96,7 @@ jobs:
       # run runtime-api tests with `enable-staging-api` feature on the 1st node
       - name: runtime-api tests
         if: ${{ matrix.partition == '1/3' }}
-        run: forklift cargo nextest run -p sp-api-test --features enable-staging-api --cargo-quiet
+        run: cargo nextest run -p sp-api-test --features enable-staging-api --cargo-quiet
 
   # some tests do not run with `try-runtime` feature enabled
   # https://github.com/paritytech/polkadot-sdk/pull/4251#discussion_r1624282143
@@ -124,7 +124,7 @@ jobs:
         uses: actions/checkout@v4
       - name: script
         run: |
-          forklift cargo nextest run --workspace \
+          cargo nextest run --workspace \
                    --locked \
                    --release \
                    --no-fail-fast \
