--- a/substrate/frame/revive/Cargo.toml
+++ b/substrate/frame/revive/Cargo.toml
@@ -55,12 +55,12 @@ xcm-builder.workspace = true
 subxt-signer = { workspace = true, optional = true, features = [
 	"unstable-eth",
 ] }
+pallet-revive-fixtures = { default-features = false, path = "fixtures" }
 
 [dev-dependencies]
 array-bytes = { workspace = true, default-features = true }
 assert_matches = { workspace = true }
 pretty_assertions = { workspace = true }
-pallet-revive-fixtures = { default-features = true, path = "fixtures" }
 secp256k1 = { workspace = true, features = ["recovery"] }
 serde_json = { workspace = true }
 hex-literal = { workspace = true }
