changing the polkadot-parachain,to accomodate export-chain-spec

--- a/cumulus/polkadot-omni-node/lib/Cargo.toml
+++ b/cumulus/polkadot-omni-node/lib/Cargo.toml
@@ -25,6 +25,7 @@ futures = { workspace = true }
 log = { workspace = true, default-features = true }
 serde = { features = ["derive"], workspace = true, default-features = true }
 serde_json = { workspace = true, default-features = true }
+color-eyre = { workspace = true }
 
 # Local
 jsonrpsee = { features = ["server"], workspace = true }
