Enable DHT bootnodes in parachain-template

--- a/umbrella/Cargo.toml
+++ b/umbrella/Cargo.toml
@@ -866,6 +866,7 @@ runtime = [
 node = [
 	"asset-test-utils",
 	"bridge-hub-test-utils",
+    "cumulus-client-bootnodes",
 	"cumulus-client-cli",
 	"cumulus-client-collator",
 	"cumulus-client-consensus-aura",
@@ -2219,6 +2220,11 @@ path = "../cumulus/parachains/runtimes/assets/test-utils"
 default-features = false
 optional = true
 path = "../cumulus/parachains/runtimes/bridge-hubs/test-utils"
+
+[dependencies.cumulus-client-bootnodes]
+default-features = false
+optional = true
+path = "../cumulus/client/bootnodes"
 
 [dependencies.cumulus-client-cli]
 default-features = false
