[stable-2503] Backport #7569 and #7585 (#7883)
This PR backports #7569 and #7585.

---------

Co-authored-by: Mrisho Lukamba <69342343+MrishoLukamba@users.noreply.github.com>

--- a/cumulus/pallets/aura-ext/Cargo.toml
+++ b/cumulus/pallets/aura-ext/Cargo.toml
@@ -24,6 +24,7 @@ sp-runtime.workspace = true
 cumulus-pallet-parachain-system.workspace = true
 
 [dev-dependencies]
+rstest = { workspace = true }
 # Cumulus
 cumulus-pallet-parachain-system = { default-features = true, path = "../parachain-system" }
 cumulus-primitives-core = { default-features = true, path = "../../primitives/core" }
