--- a/cumulus/client/consensus/aura/Cargo.toml
+++ b/cumulus/client/consensus/aura/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "cumulus-client-consensus-aura"
 description = "AURA consensus algorithm for parachains"
-version = "0.22.0-rc1"
+version = "0.7.0"
 authors.workspace = true
 edition.workspace = true
 license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
@@ -90,6 +90,7 @@ polkadot-primitives.default-features = true
 cumulus-test-client = { path = "../../../test/client" }
 cumulus-test-relay-sproof-builder = { path = "../../../test/relay-sproof-builder", default-features = false }
 sp-keyring = { path = "../../../../substrate/primitives/keyring", default-features = false }
+rstest = { workspace = true }
 
 [features]
 # Allows collator to use full PoV size for block building
