--- a/cumulus/test/runtime/Cargo.toml
+++ b/cumulus/test/runtime/Cargo.toml
@@ -89,6 +89,11 @@ std = [
 	"substrate-wasm-builder",
 ]
 increment-spec-version = []
+# A runtime with elastic-scaling configuration.
 elastic-scaling = []
+# A runtime with low slot duration of 500ms for low-latency testing with 12 cores.
 elastic-scaling-500ms = []
+# A runtime with a slot duration of 6s but parameters that allow multiple blocks per slot.
+elastic-scaling-multi-block-slot = []
+# A runtime with 6s slot duration which sends RFC-103 compatible UMP signals.
 experimental-ump-signals = ["cumulus-pallet-parachain-system/experimental-ump-signals"]
