--- a/cumulus/client/consensus/aura/Cargo.toml
+++ b/cumulus/client/consensus/aura/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "cumulus-client-consensus-aura"
 description = "AURA consensus algorithm for parachains"
-version = "0.7.0"
+version = "0.22.0-rc1"
 authors.workspace = true
 edition.workspace = true
 license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
