--- a/polkadot/Cargo.toml
+++ b/polkadot/Cargo.toml
@@ -41,7 +41,7 @@ polkadot-node-core-pvf-common = { workspace = true, default-features = true }
 polkadot-node-core-pvf-execute-worker = { workspace = true, default-features = true }
 
 [target.'cfg(target_os = "linux")'.dependencies]
-tikv-jemallocator = { version = "0.5.0", features = ["unprefixed_malloc_on_supported_platforms"] }
+tikv-jemallocator = { workspace = true, features = ["unprefixed_malloc_on_supported_platforms"] }
 
 [dev-dependencies]
 assert_cmd = { workspace = true }
