--- a/polkadot/node/core/pvf/common/Cargo.toml
+++ b/polkadot/node/core/pvf/common/Cargo.toml
@@ -35,10 +35,10 @@ sp-io = { workspace = true, default-features = true }
 sp-tracing = { workspace = true, default-features = true }
 
 [target.'cfg(target_os = "linux")'.dependencies]
-landlock = "0.3.0"
+landlock = { workspace = true }
 
 [target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dependencies]
-seccompiler = "0.4.0"
+seccompiler = { workspace = true }
 
 [dev-dependencies]
 assert_matches = { workspace = true }
