--- a/polkadot/node/overseer/Cargo.toml
+++ b/polkadot/node/overseer/Cargo.toml
@@ -38,7 +38,7 @@ polkadot-primitives-test-helpers = { workspace = true }
 sp-core = { workspace = true, default-features = true }
 
 [target.'cfg(target_os = "linux")'.dependencies]
-tikv-jemalloc-ctl = "0.5.0"
+tikv-jemalloc-ctl = { workspace = true }
 
 [features]
 default = ["futures_channel"]
