--- a/polkadot/node/primitives/Cargo.toml
+++ b/polkadot/node/primitives/Cargo.toml
@@ -32,7 +32,7 @@ sp-runtime = { workspace = true, default-features = true }
 thiserror = { workspace = true }
 
 [target.'cfg(not(target_os = "unknown"))'.dependencies]
-zstd = { version = "0.12.4", default-features = false }
+zstd = { workspace = true, default-features = false }
 
 [dev-dependencies]
 polkadot-erasure-coding = { workspace = true, default-features = true }
