Revert "use `--profile production` for parachain-debug image"
This reverts commit c5cdce1b5052f28a8d2b8931178fb95bb58fdd61.

--- a/.gitlab/pipeline/build.yml
+++ b/.gitlab/pipeline/build.yml
@@ -147,10 +147,10 @@ build-linux-stable-cumulus:
   variables:
     # Enable debug assertions since we are running optimized builds for testing
     # but still want to have debug assertions.
-    # RUSTFLAGS: "-Cdebug-assertions=y -Dwarnings"
+    RUSTFLAGS: "-Cdebug-assertions=y -Dwarnings"
   script:
-    - echo "___Building a relese binary___"
-    - time cargo build --profile production --locked -p polkadot-parachain-bin --bin polkadot-parachain
+    - echo "___Building a binary, please refrain from using it in production since it goes with the debug assertions.___"
+    - time cargo build --release --locked -p polkadot-parachain-bin --bin polkadot-parachain
     - echo "___Packing the artifacts___"
     - mkdir -p ./artifacts
     - mv ./target/release/polkadot-parachain ./artifacts/.
