cherry pick backport, not compiling yet

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -346,7 +346,6 @@ members = [
 	"substrate/frame/core-fellowship",
 	"substrate/frame/delegated-staking",
 	"substrate/frame/democracy",
-	"substrate/frame/election-provider-multi-block",
 	"substrate/frame/election-provider-multi-phase",
 	"substrate/frame/election-provider-multi-phase/test-staking-e2e",
 	"substrate/frame/election-provider-support",
@@ -420,8 +419,6 @@ members = [
 	"substrate/frame/session/benchmarking",
 	"substrate/frame/society",
 	"substrate/frame/staking",
-	"substrate/frame/staking/ah-client",
-	"substrate/frame/staking/rc-client",
 	"substrate/frame/staking/reward-curve",
 	"substrate/frame/staking/reward-fn",
 	"substrate/frame/staking/runtime-api",
@@ -996,17 +993,15 @@ pallet-safe-mode = { default-features = false, path = "substrate/frame/safe-mode
 pallet-salary = { path = "substrate/frame/salary", default-features = false, version = "25.0.0-rc1" }
 pallet-scheduler = { path = "substrate/frame/scheduler", default-features = false, version = "41.0.0-rc1" }
 pallet-scored-pool = { default-features = false, path = "substrate/frame/scored-pool" }
-pallet-session = { path = "substrate/frame/session", default-features = false, version = "40.0.0-rc1" }
-pallet-session-benchmarking = { path = "substrate/frame/session/benchmarking", default-features = false, version = "40.0.0-rc1" }
-pallet-skip-feeless-payment = { path = "substrate/frame/transaction-payment/skip-feeless-payment", default-features = false, version = "15.0.0-rc1" }
-pallet-society = { path = "substrate/frame/society", default-features = false, version = "40.0.0-rc1" }
-pallet-staking = { path = "substrate/frame/staking", default-features = false, version = "40.0.0-rc1" }
-pallet-staking-ah-client = { path = "substrate/frame/staking/ah-client", default-features = false }
-pallet-staking-rc-client = { path = "substrate/frame/staking/rc-client", default-features = false, version = "0.2.0-rc1" }
-pallet-staking-reward-curve = { path = "substrate/frame/staking/reward-curve", default-features = false, version = "12.0.0" }
-pallet-staking-reward-fn = { path = "substrate/frame/staking/reward-fn", default-features = false, version = "22.0.0" }
-pallet-staking-runtime-api = { path = "substrate/frame/staking/runtime-api", default-features = false, version = "26.0.0-rc1" }
-pallet-state-trie-migration = { path = "substrate/frame/state-trie-migration", default-features = false, version = "44.0.0-rc1" }
+pallet-session = { path = "substrate/frame/session", default-features = false }
+pallet-session-benchmarking = { path = "substrate/frame/session/benchmarking", default-features = false }
+pallet-skip-feeless-payment = { path = "substrate/frame/transaction-payment/skip-feeless-payment", default-features = false }
+pallet-society = { path = "substrate/frame/society", default-features = false }
+pallet-staking = { path = "substrate/frame/staking", default-features = false }
+pallet-staking-reward-curve = { path = "substrate/frame/staking/reward-curve", default-features = false }
+pallet-staking-reward-fn = { path = "substrate/frame/staking/reward-fn", default-features = false }
+pallet-staking-runtime-api = { path = "substrate/frame/staking/runtime-api", default-features = false }
+pallet-state-trie-migration = { path = "substrate/frame/state-trie-migration", default-features = false }
 pallet-statement = { default-features = false, path = "substrate/frame/statement" }
 pallet-sudo = { path = "substrate/frame/sudo", default-features = false, version = "40.0.0-rc1" }
 pallet-template = { path = "templates/solochain/pallets/template", default-features = false, version = "0.1.0" }
